build based on bf81951

--- a/dev/nbhtml/index.html
+++ b/dev/nbhtml/index.html
@@ -17,7 +17,7 @@
     <h1>Notebooks</h1>
     
     <ul>
-    <li><a href="Notebook101_NonlinearDiffusion1D.html">Notebook101_NonlinearDiffusion1D</a></li><li><a href="Notebook102_WaveEquation1D.html">Notebook102_WaveEquation1D</a></li><li><a href="Notebook203_Brusselator.html">Notebook203_Brusselator</a></li>
+    <li><a href="Notebook101_NonlinearDiffusion1D.html">Notebook101_NonlinearDiffusion1D</a></li><li><a href="Notebook102_WaveEquation1D.html">Notebook102_WaveEquation1D</a></li><li><a href="Notebook103_NonlinearStorage1D.html">Notebook103_NonlinearStorage1D</a></li><li><a href="Notebook203_Brusselator.html">Notebook203_Brusselator</a></li>
     </ul>
 </body>
 </html>
